[tool.poetry]
name = "example-unittest-python"
version = "1.0.0"
description = ""
authors = ["sakagami0615 <sakagami0615@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["*/__init__.py"]